# slidewalk

./: BUILD.md  CMakeLists.txt  README.md  main.cpp  slidewalk.pro
.cmake/: FindOpenSlide.cmake
src/: CMakeLists.txt  view.cpp
